# Computer-Graphics-and-Multimedia-Examples

./: README.md
m04-view-projection/: CMakeLists.txt
m04-view-projection/01-camera/: animation-with-camera.cpp
m04-view-projection/02-projection/: view-and-projection.cpp
m04-view-projection/03-user-interaction/: user-interaction.cpp
m04-view-projection/04-window-events/: window_events.cpp
m04-view-projection/05-callbacks-util/: callbacks_util.cpp
m06-advanced-textures/: CMakeLists.txt
m06-advanced-textures/01-cube-map/: cube-map.cpp
m06-advanced-textures/02-sky-box/: fragment_shader02.glsl  skybox.cpp
m06-advanced-textures/03-reflecting-object/: reflecting-object.cpp  vertex_shader03x.glsl
m06-advanced-textures/04-render-to-texture/: render-to-texture.cpp  setup_scene.cpp  setup_view_in_view.cpp  sharing.h
m06-advanced-textures/05A-pixel-filters/: fragment_shader05A.glsl  pixel_filters.cpp
m06-advanced-textures/05B-image-processing/: image-processing.cpp  setup_scene.cpp  setup_view_in_view.cpp  sharing.h
m06-advanced-textures/06-point-sprites/: point-shape.h  point_sprites.cpp
m06-advanced-textures/07-point-sprites-2/: fragment_shader07.glsl  point_sprites.cpp
m07-lighting-and-shading/: CMakeLists.txt
m07-lighting-and-shading/01-ambient-color/: ambient_color.cpp
m07-lighting-and-shading/02-ambient-light/: ambient-light.cpp  fragment_shader02.glsl  vertex_shader02.glsl
m07-lighting-and-shading/03-visualize-normals/: visualize_normals.cpp
m07-lighting-and-shading/04-adjust-normals/: adjust_normals.cpp  fragment_shader04.glsl  vertex_shader04.glsl
m07-lighting-and-shading/05-point-lighting/: point_lighting.cpp
m07-lighting-and-shading/06-directional-lighting/: directional_lighting.cpp  fragment_shader06.glsl
m07-lighting-and-shading/07-shading-textures/: shading_textures_world_coordinates.cpp  vertex_shader07.glsl
m08-procedural-textures/: CMakeLists.txt
m08-procedural-textures/01-stripes/: fragment_shader01.glsl  stripes.cpp  vertex_shader01.glsl
m08-procedural-textures/02-fractal/: fractal.cpp
m08-procedural-textures/03-bump-map/: bump_map.cpp  fragment_shader03.glsl  vertex_shader03.glsl
m08-procedural-textures/04-noise-on-square/: fragment_shader04.glsl  noise-on-square.cpp  vertex_shader04.glsl
m08-procedural-textures/05-compare-noise/: compare_noise.cpp  fragment_shader05.glsl  vertex_shader05.glsl
m08-procedural-textures/06-clouds/: clouds.cpp  fragment_shader06.glsl  vertex_shader06.glsl
m08-procedural-textures/07-clouds-glsl/: clouds_glsl.cpp  fragment_shader07.glsl
